<resources>
    <string name="app_name">MATI</string>
    <string name="inicio_sesion_btn_vermapa_texto">VER MAPA</string>
    <string name="inicio_sesion_edt_usuario_hint">Usuario</string>
    <string name="inicio_sesion_edt_password_hint">Contraseña</string>
    <string name="inicio_sesion_btn_iniciar_sesion_texto">Iniciar Sesion</string>
    <string name="title_activity_inicio_sesion">Inicio de sesión</string>
    <string name="administrador_capturista_agregar_usuriario_hint">Usuario</string>
    <string name="administrador_capturista_agregar_nombre_hint">Nombre</string>
    <string name="administrador_capturista_agregar_AParteno_hint">Apellido Paterno</string>
    <string name="administrador_capturista_agregar_AMarteno_hint">Apellido Materno</string>
    <string name="administrador_capturista_agregar_Telefono_hint">Telefono</string>
    <string name="administrador_capturista_agregar_email_hint">Correo electronico</string>
    <string name="administrador_capturista_agregar_password_hint">Generar contraseña</string>
    <string name="administrador_capturista_agregar_cancelar_text">Cancelar</string>
    <string name="administrador_capturista_agregar_guardar_text">Guardar</string>
    <string name="administrador_capturista_editar_usuriario_hint">Editar Usuario</string>
    <string name="administrador_capturista_editar_password_hint">Generar Contraseña</string>
    <string name="administrador_capturista_editar_nombre_hint">Nombre</string>
    <string name="administrador_capturista_editar_AParteno_hint">Apellido Paterno</string>
    <string name="administrador_capturista_editar_AMarteno_hint">Apellido Materno</string>
    <string name="administrador_capturista_editar_Telefono_hint">Telefono</string>
    <string name="administrador_capturista_editar_email_hint">Correo Electronico</string>
    <string name="administrador_capturista_editar_cancelar_text">CANCELAR</string>
    <string name="administrador_capturista_agregar_editar_text">Editar</string>
    <string name="buscar_usuario_hint">Usuario</string>
    <string name="buscar_usuario_btn">Buscar</string>
    <string name="title_activity_administrador">Administrador</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cuenta">Ver cuenta</string>
    <string name="administrador_cuenta_editar_informacion_hint">Editar Informacion</string>
    <string name="administrador_cuenta_cerrar_sesion_hint">Cerrar Sesion</string>
    <string name="administrador_cuenta_nombre_hint">Nombre (s)</string>
    <string name="administrador_cuenta_apellido_paterno_hint">Apellido Paterno</string>
    <string name="administrador_cuenta_apellido_materno_hint">Apellido Materno</string>
    <string name="administrador_cuenta_correo_electronico_hint">Correo Electronico</string>
    <string name="administrador_cuenta_numero_telefono_hint">Numero de Telefono</string>
    <string name="administrador_cuenta_editar_informacion_nombre_hint">Nombre (s)</string>
    <string name="administrador_cuenta_editar_informacion_apellido_paterno_hint">Apellido Paterno</string>
    <string name="administrador_cuenta_editar_informacion_apellido_materno_hint">Apellido Materno</string>
    <string name="administrador_cuenta_editar_informacion_correo_electronico_hint">Correo Electronico</string>
    <string name="administrador_cuenta_editar_informacion_numero_telefono_hint">Numero de Telefono</string>
    <string name="administrador_cuenta_editar_informacion_guardar_hint">Guardar Cambios</string>
    <string name="administrador_cuenta_editar_informacion_cancelar_hint">Cancelar</string>
    <string name="title_activity_capturista">Capturista</string>
    <string name="capturista_tienda_agregar_nombre_hint">Nombre del negocio</string>
    <string name="capturista_tienda_agregar_direccion_hint">Direccion</string>
    <string name="capturista_tienda_agregar_telefono_hint">Telefono:</string>
    <string name="capturista_tienda_agregar_email_hint">Correo Electronico:</string>
    <string name="capturista_tienda_agregar_nombre_encargado_hint">Nombre de Encargado:</string>
    <string name="capturista_tienda_agregar_guardar_hint">Guardar</string>
    <string name="capturista_tienda_agregar_cancelar_hint">Cancelar</string>
    <string name="capturista_tienda_agregar_giro_tienda_txt">Giro Tienda</string>
    <string name="capturista_tienda_editar_nombre_hint">Nombre</string>
    <string name="capturista_tienda_editar_direccion_hint">Direccion</string>
    <string name="capturista_tienda_editar_telefono_hint">Telefono</string>
    <string name="capturista_tienda_editar_giro_tienda_txt">Giro Tienda</string>
    <string name="capturista_tienda_editar_email_hint">Correo Electronico</string>
    <string name="capturista_tienda_editar_nombre_encargado_hint">Nombre Encargado</string>
    <string name="capturista_tienda_editar_guardar_hint">Guardar</string>
    <string name="capturista_tienda_editar_cancelar_hint">Cancelar</string>
    <string name="capturista_cuenta_editar_informacion_hint">Editar Informacion</string>
    <string name="capturista_cuenta_cerrar_sesion_hint">Cerrar Sesion</string>
    <string name="capturista_cuenta_nombre_hint">Nombre (s)</string>
    <string name="capturista_cuenta_apellido_paterno_hint">Apellido Paterno</string>
    <string name="capturista_cuenta_apellido_materno_hint">Apellido Materno</string>
    <string name="capturista_cuenta_correo_electronico_hint">Correo Electronico</string>
    <string name="capturista_cuenta_numero_telefono_hint">Numero de Telefono</string>
    <string name="capturista_cuenta_editar_informacion_nombre_hint">Nombre (s)</string>
    <string name="capturista_cuenta_editar_informacion_apellido_paterno_hint">Apellido Paterno</string>
    <string name="capturista_cuenta_editar_informacion_apellido_materno_hint">Apellido Materno</string>
    <string name="capturista_cuenta_editar_informacion_correo_electronico_hint">Correo Electronico</string>
    <string name="capturista_cuenta_editar_informacion_numero_telefono_hint">Numero de Telefono</string>
    <string name="capturista_cuenta_editar_informacion_guardar_cambios_hint">Guardar Cambios</string>
    <string name="capturista_provedor_agregar_nombre_hint">Nombre</string>
    <string name="capturista_provedor_agregar_guardar_hint">Guardar</string>
    <string name="capturista_provedor_agregar_cancelar_hint">cancelar</string>
    <string name="capturista_provedor_agregar_descripcion_hint">Descripcion</string>
    <string name="agregar">Agregar</string>
    <string name="editar">Editar</string>
    <string name="confirmar">Confirmar</string>
    <string name="eliminar">Eliminar</string>
    <string name="sesion">Cerrar sesión</string>
    <string name="add_capturista_text_error_empty_nombre">Ingrese Nombre</string>
    <string name="add_capturista_text_error_empty_paterno">Inserte Apellido Paterno</string>
    <string name="add_capturista_text_error_empty_materno">Inserte Apellido Materno</string>
    <string name="add_capturista_text_error_empty_telefono">Ingrese Telefono</string>
    <string name="add_capturista_text_error_incorrect_telefono">Telefono Invalido</string>
    <string name="add_capturista_text_error_empty_correo">Inserte Correo</string>
    <string name="add_capturista_text_error_incorrect_correo">Correo Invalido</string>
    <string name="administrador_capturista_agregar_usuario_text">Generar Nombre de Usuario</string>
    <string name="administrador_capturista_agregar_generar_btn_text">Generar </string>
    <string name="capturista_tienda_agregar_ubicacion">Ubicación</string>
    <string name="capturista_tienda_agregar_longitud">Longitud:</string>
    <string name="capturista_tienda_agregar_latitud">Latitud:</string>

    <string name="title_activity_mapa">Mapa</string>
    <string name="word_Hola">¡Hola!</string>
    <string name="word_Administrador">ADMINISTRADOR</string>
    <string name="word_infoPersonal">Información Personal</string>
    <string name="word_infoSesion">Sesión MATI</string>
    <string name="who">La app MATI fue desarrolla por el equipo de trabajo denominado Calidad Jaguar, integrado por estudiantes de la Ingenieria en Sistemas Computacionales del ITSCH</string>
    <string name="cjmail">calidadjaguaritsch@gmail.com</string>
    <string name="socios">MATI esta respaldada por:</string>
</resources>
