<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="18dp"
    tools:context="layout.capturista_tienda_editar">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/capturista_tienda_editar_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/capturista_tienda_editar_nombre_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/capturista_tienda_editar_nombre_hint"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/capturista_tienda_editar_direccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/capturista_tienda_editar_direccion_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/capturista_tienda_editar_direccion_hint"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/capturista_tienda_editar_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/capturista_tienda_editar_telefono_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/capturista_tienda_editar_telefono_hint"
            android:inputType="phone" />
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:id="@+id/capturista_tienda_editar_giro_tienda_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp"
        android:gravity="center"
        android:text="@string/capturista_tienda_editar_giro_tienda_txt"/>






    <android.support.design.widget.TextInputLayout
        android:id="@+id/capturista_tienda_editar_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/capturista_tienda_editar_email_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/capturista_tienda_editar_email_hint"
            android:inputType="phone" />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/capturista_tienda_editar_nombre_encargado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/capturista_tienda_editar_nombre_encargado_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/capturista_tienda_editar_nombre_encargado_hint"
            android:inputType="phone" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/capturista_tienda_editar_guardar_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/capturista_tienda_editar_guardar_hint"/>

        <Button
            android:id="@+id/capturista_tienda_editar_cancelar_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/capturista_tienda_editar_cancelar_hint"/>

    </LinearLayout>



</LinearLayout>
