<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp"
    android:orientation="vertical"
    tools:context="layout.administrador_cuenta">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/administrador_cuenta_editar_informacion_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/administrador_cuenta_editar_informacion_hint"/>
        <Button
            android:id="@+id/administrador_cuenta_cerrar_sesion_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:text="@string/administrador_cuenta_cerrar_sesion_hint"/>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/administrador_cuenta_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/administrador_cuenta_nombre_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/administrador_cuenta_nombre_hint"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/administrador_cuenta_apellido_paterno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/administrador_cuenta_apellido_paterno_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/administrador_cuenta_apellido_paterno_hint"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/administrador_cuenta_apellido_materno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/administrador_cuenta_apellido_materno_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/administrador_cuenta_apellido_materno_hint"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/administrador_cuenta_correo_electronico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/administrador_cuenta_correo_electronico_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/administrador_cuenta_correo_electronico_hint"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/administrador_cuenta_numero_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/administrador_cuenta_numero_telefono_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/administrador_cuenta_numero_telefono_hint"
            android:inputType="phone" />
    </android.support.design.widget.TextInputLayout>






</LinearLayout>
