<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="18dp"
    tools:context="layout.capturista_provedor_agregar">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/capturista_provedor_agregar_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/capturista_provedor_agregar_nombre_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/capturista_provedor_agregar_nombre_hint"
            android:inputType="phone" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/capturista_provedor_agregar_descripcion_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="18dp"
        android:hint="@string/capturista_provedor_agregar_descripcion_hint"

        />






    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="18dp">

        <Button
            android:id="@+id/capturista_provedor_agregar_guardar_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/capturista_provedor_agregar_guardar_hint"/>

        <Button
            android:id="@+id/capturista_provedor_agregar_cancelar_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/capturista_provedor_agregar_cancelar_hint"/>

    </LinearLayout>

</LinearLayout>
